--- a/templates/Customer/HomeFreal.html
+++ b/templates/Customer/HomeFreal.html
@@ -326,48 +326,48 @@
             <ul>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance <strong class="new-notificate__friend">12 </strong></span>
-                  <span class="new-detail__friend">125 post today</span>
+                  <span class="friend-name">Ngodatit213<strong class="new-notificate__friend">12 </strong></span>
+                  <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance <strong class="new-notificate__friend">5</strong></span>
-                  <span class="new-detail__friend">25 post today</span>
+                  <span class="friend-name">CatTuong3<strong class="new-notificate__friend">5</strong></span>
+                  <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance <strong class="new-notificate__friend">1</strong></span>
-                  <span class="new-detail__friend">12 post today</span>
+                  <span class="friend-name">Minhle_1<strong class="new-notificate__friend">1</strong></span>
+                  <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance <strong class="new-notificate__friend">1</strong></span>
-                  <span class="new-detail__friend">12 post today</span>
+                  <span class="friend-name">Briget_129<strong class="new-notificate__friend">1</strong></span>
+                  <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance <strong class="new-notificate__friend">1</strong></span>
-                  <span class="new-detail__friend">12 post today</span>
+                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">1</strong></span>
+                  <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance <strong class="new-notificate__friend">1</strong></span>
-                  <span class="new-detail__friend">12 post today</span>
+                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">1</strong></span>
+                  <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance <strong class="new-notificate__friend">1</strong></span>
-                  <span class="new-detail__friend">12 post today</span>
+                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">1</strong></span>
+                  <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
             </ul>
-            <span class="see">See all</span>
+            <span class="view">View all</span>
           </div>
         </div>
       </div>
