Update Post thinking

--- a/templates/Customer/HomeFreal.html
+++ b/templates/Customer/HomeFreal.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freal Home</title>
+    <!-- Bootstrap -->
+    <
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+    <link href="../../static/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../static/css/swiper-bundle.min.css" />
+
     <!-- plugins:css -->
     <link rel="stylesheet" href="../../static/vendor/font-awesome/mdi/css/materialdesignicons.min.css" />
     <link rel="stylesheet" href="../../static/vendor/font-awesome/css/vendor.bundle.base.css" />
@@ -143,7 +151,7 @@
           <div class="content-think">
             <div class="content-think__post">
               <img src="../../static/images/avata/avata1.jpg" alt="profile" />
-              <input type="text" placeholder="What's on your mind?" />
+              <input type="text" placeholder="What's on your mind?" data-toggle="modal" data-target="#thinkModal" />
             </div>
             <div class="content-think__actions">
               <ul class="think-item__right">
@@ -167,10 +175,44 @@
                 <li>
                   <a class="think-item__left__pen" href="#"><i class="fa-regular fa-pen-to-square"></i> Draft</a>
                 </li>
-                <li>
-                  <a class="think-item__left__post" href="#">Post</a>
-                </li>
+                <li><a class="think-item__left__post" href="#">Post</a></li>
               </ul>
+            </div>
+          </div>
+
+          <!-- Modal -->
+          <div class="modal fade" id="thinkModal" tabindex="-1" aria-labelledby="thinkModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="thinkModalLabel">Tạo bài viết</h5>
+                  <div class="close-modal" data-dismiss="modal" aria-label="Close">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </div>
+                <div class="modal-line"></div>
+                <div class="modal-body">
+                  <div class="header-info">
+                    <img src="../../static/images/avata/avata1.jpg" alt="profile" />
+                    <div class="modal-info">
+                      <h3>AndyVu Coder</h3>
+                      <span>Công khai</span>
+                    </div>
+                  </div>
+                  <textarea class="form-control" placeholder="Vũ ơi, bạn đang nghĩ gì thế?" id="postText"></textarea>
+                  <div class="actions">
+                    <a href="#"><i class="fas fa-font"></i></a>
+                    <a href="#"><i class="fas fa-user-friends"></i></a>
+                    <a href="#"><i class="far fa-smile"></i></a>
+                    <a href="#"><i class="fas fa-map-marker-alt"></i></a>
+                    <a href="#"><i class="far fa-images"></i></a>
+                    <a href="#"><i class="fas fa-paperclip"></i></a>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Đăng</button>
+                </div>
+              </div>
             </div>
           </div>
           <section class="post">
@@ -338,31 +380,31 @@
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Minhle_1<strong class="new-notificate__friend">1</strong></span>
+                  <span class="friend-name">Minhle_1<strong class="new-notificate__friend">7</strong></span>
                   <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Briget_129<strong class="new-notificate__friend">1</strong></span>
+                  <span class="friend-name">Briget_129<strong class="new-notificate__friend">30</strong></span>
                   <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">1</strong></span>
+                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">11</strong></span>
                   <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">1</strong></span>
+                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">9</strong></span>
                   <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
               <li>
                 <div class="friend-details">
-                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">1</strong></span>
+                  <span class="friend-name">Figma maintenance<strong class="new-notificate__friend">5</strong></span>
                   <span class="new-detail__friend">Last active recently</span>
                 </div>
               </li>
@@ -382,7 +424,24 @@
           seeAllBtn.textContent = notificationSection.classList.contains("expanded") ? "Show less" : "See all";
         });
       });
+      // modal
+      $(document).ready(function () {
+        $("#thinkModal").on("shown.bs.modal", function () {
+          $("#myInput").trigger("focus");
+        });
+      });
+      document.addEventListener("DOMContentLoaded", function () {
+        var textarea = document.getElementById("postText");
+
+        textarea.addEventListener("input", function () {
+          this.style.height = "auto";
+          this.style.height = this.scrollHeight + "px";
+        });
+      });
     </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/99cbdec5b3.js" crossorigin="anonymous"></script>
     <script src="../../static/js/script.js"></script>
   </body>
