--- a/static/css/HomeFreal.main.css
+++ b/static/css/HomeFreal.main.css
@@ -441,7 +441,6 @@ body {
   flex: 1;
   padding: 20px;
   overflow-y: auto;
-  max-width: 900px;
 }
 /* Header-content-think */
 .content-think {
@@ -454,6 +453,9 @@ body {
   display: flex;
   flex-direction: column; /* Thay đổi flex-direction để các phần tử con xếp theo cột dọc */
   align-items: flex-start; /* Căn chỉnh các phần tử con theo chiều ngang */
+}
+.hidden {
+  display: none;
 }
 
 .content-think__post {
@@ -479,6 +481,7 @@ body {
   background-color: var(--bg-input-color-line);
   font-size: 16px;
   outline: none;
+  cursor: pointer;
 }
 
 .content-think__actions {
@@ -543,6 +546,184 @@ body {
 .think-item__left i:hover {
   color: var(--white-color-font);
 }
+/* Header-content-think end */
+/* Modal-content-think */
+.modal-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: none;
+}
+
+.modal-line {
+  border: 1px solid var(--bg-input-color-line);
+  margin-bottom: 5px;
+}
+
+.modal-content {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: var(--bg-color-nav-sider);
+  background-clip: padding-box;
+  border: 1px solid var(--bg-input-color-line);
+  border-radius: 0.3rem;
+  outline: 0;
+}
+.modal-title {
+  display: block;
+  margin-bottom: 0;
+  line-height: 1.5;
+}
+.modal-header .close-modal {
+  margin: 0;
+  font-size: 1.5rem;
+  color: var(--grey-color-font);
+}
+.close-modal i.fa-xmark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: var(--bg-input-color-line);
+  cursor: pointer;
+}
+.close-modal i.fa-xmark:hover {
+  background-color: var(--bg-color-hover);
+  cursor: pointer;
+}
+
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 1rem;
+  margin-bottom: 10px;
+}
+.modal-body .header-info {
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+.modal-body img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+/* Post info container */
+.modal-body .modal-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align items to the start (left) */
+  margin-right: auto; /* Adjust margin as needed */
+}
+
+.modal-body .modal-info h3 {
+  margin: 0;
+  font-size: 16px;
+  text-align: center;
+  color: var(--white-color-font);
+}
+
+.modal-body .modal-info span {
+  font-size: 12px;
+  color: var(--grey-color-font);
+}
+
+.modal-body input {
+  width: 100%;
+  border: none;
+  outline: none;
+  margin-bottom: 1rem;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: auto;
+  min-height: 50px;
+  overflow-y: hidden;
+  padding: 0.375rem 0.75rem;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--grey-color-font);
+  background-color: var(--bg-color-nav-sider);
+  background-clip: padding-box;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+textarea {
+  border: none !important;
+}
+.form-control:focus {
+  color: var(--grey-color-font);
+  background-color: var(--bg-color-nav-sider);
+  border-color: var(--bg-color-nav-sider);
+  outline: 0;
+}
+
+.modal-body .actions {
+  display: flex;
+  border: none;
+  outline: none;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.modal-body .actions a {
+  padding: 5px;
+  text-decoration: none;
+  color: var(--grey-color-font);
+  font-size: 1.25rem;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: space-between;
+  border-top: none;
+  padding: 0 2rem 2rem;
+}
+
+.modal-footer .btn {
+  padding: 0.5rem 2rem;
+  width: 100%;
+  max-width: 50rem;
+}
+
+/* Adjust modal-dialog to expand with content */
+.modal-dialog {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  max-width: 600px; /* You can adjust the max-width as needed */
+  margin: 30px auto; /* Center the modal vertically with some margin */
+}
+
+.modal-content {
+  width: 100%;
+  height: auto;
+}
+
+.close-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--bg-input-color-line);
+  cursor: pointer;
+}
+/* Modal-content-think end */
 
 /* Post Section */
 .post {
