--- a/templates/Customer/HomeFreal.html
+++ b/templates/Customer/HomeFreal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freal Home</title>
     <!-- Bootstrap -->
-    <
+
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
@@ -113,6 +113,9 @@
               <a href="HomeFreal.html"><i href="HomeFreal.html" class="fa-solid fa-house"></i> Home</a>
             </li>
           </ul>
+          <!-- <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
+            <span class="mdi mdi-menu"></span>
+          </button> -->
         </div>
         <div class="navbar-center">
           <ul>
@@ -146,7 +149,7 @@
           </ul>
         </div>
       </header>
-      <div class="container">
+      <div class="container-body">
         <main class="content">
           <div class="content-think">
             <div class="content-think__post">
@@ -496,6 +499,17 @@
           imageUpload.value = "";
         });
       });
+      //nav-menu
+      // document.addEventListener("DOMContentLoaded", function () {
+      //   const minimizeButton = document.querySelector('[data-toggle="minimize"]');
+      //   const sidebar = document.querySelector(".sidebar");
+      //   const mainContainer = document.querySelector(".main-container");
+
+      //   minimizeButton.addEventListener("click", function () {
+      //     sidebar.classList.toggle("collapsed");
+      //     mainContainer.classList.toggle("collapsed");
+      //   });
+      // });
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
