--- a/templates/Customer/HomeFreal.html
+++ b/templates/Customer/HomeFreal.html
@@ -140,7 +140,7 @@
                 <img src="../../static/images/avata/avata1.jpg" alt="Profile" />
                 <i class="fa-solid fa-circle-chevron-down"></i>
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-list__menu">
                 <li><a href="#">Log out</a></li>
                 <li><a href="#">Add account</a></li>
                 <li><a href="#">Setting account</a></li>
